<resources>
    <string name="app_name">MyMenu</string>
    <string name="action_settings">Settings</string>
    <string name="action_settings_change_server">Change Server</string>
    <string name="ok">OK</string>
    <string name="or">or</string>
    <string name="cancel">Cancel</string>
    <string name="create">Create</string>
    <string name="send">Send</string>
    <string name="search">Search</string>
    <string name="save">Save</string>
    <string name="submit">Submit</string>
    <string name="share">Share</string>
    <string name="sortby">Sort by :</string>
    <string name="status">Status:</string>
    <string name="point">Point:</string>
    <string name="sort_az">A-Z</string>
    <string name="sort_itemAZ">Item A-Z</string>
    <string name="sort_distance">Distance</string>
    <string name="sort_amount">Amount</string>
    <string name="sort_date">Date</string>
    <string name="sort_number">Number</string>
    <string name="comming_soon">Coming Soon...</string>
    <string name="common_error">Feature will be added soon.</string>
    <string name="sort_status">Status</string>
    <string name="choose">Choose</string>
    <string name="new_contact">Add New Contact</string>
    <string name="search_no_result">There is no restaurant found.</string>
    <string name="search_profile_no_result">There is no criteria created for search profile.</string>
    <string name="myorder_title">MyOrders</string>
    <string name="delete_item">Are you sure you want to delete this item?</string>
    <string name="my_order_cancel">Are you sure you want to cancel?</string>
    <string name="delete_message">Are you sure you want to delete this message?</string>
    <string name="my_order_pay_title">Are you sure you want to pay?</string>
    <string name="my_order_no_item_pay">There is no item to pay?</string>
     <string name="delete_item_order">The ordered item can not been deleted.</string>
    <string name="audioError">Audio Error</string>
    <string name="clientError">Client Error</string>
    <string name="networkError">Network Error</string>
    <string name="serverError">Server Error</string>
    <string name="noMatch">No Match</string>
    <string name="restaurantNameTest">PizzaHut</string>
    <string name="dateTest">09/18/2013</string>
    <string name="pointTest">500 points</string>
    <string name="numberTest"> 500</string>
    <string name="addressTest">1234 Ave C.</string>
    <string name="stateTest">Austin, Texas 78741</string>
    <string name="menuItemTest">Rated Ribs</string>
    <string name="nameTest">Ryan</string>
    <string name="statusTest">Silver</string>
    <string name="phoneTest">0543530959</string>
    <string name="emailTest">nguyenxuanquocbao@gmail.com</string>
    <string name="confirmationTest">Do you want to share 200 points to baocatsamac_@yahoo.com ?</string>
    <string name="activity_map_resTitle">Restaurants</string>
    <string name="close">Close</string>
    <string name="activity_map_tvMysearch">My search</string>
    <string name="activity_map_viewstring">View:</string>
    <string name="activity_map_close">Close</string>
    <string name="activity_map_sortby">Sort by :</string>
    <string name="activity_map_hint">Search(menu items, addy, city/zip, name, ethnicity)</string>
    <string name="activity_map_locate_error">Can not locate the current location</string>
    <string name="activity_map_btn_map">Map</string>
    <string name="activity_map_btn_list">List</string>
    <string name="activity_map_mess_confirm_gps">Your GPS is disabled. Do you want to enable it?</string>
    <string name="activity_advanced_search_tv_title">MySearch</string>
    <string name="activity_advanced_search_bt_savedProfile">MySearch Profile Saved.</string>
    <string name="activity_advanced_search_edt_items">Enter Menu Items/Ingredients/Tag Keywords <i>(e.g. Salmon Sushi, No Onion, Vegan, Gluten-Free, Cheeseburger, Apple Martini, etc.)</i></string>
    <string name="activity_advanced_search_btSavedProfe">MySearch Profile Saved.</string>
    <string name="activity_advanced_search_tv_money">Avg.Menu Item $</string>
    <string name="activity_advanced_search_tv_menuType">Published Menu Types.</string>
    <string name="activity_advanced_search_multipleSelected">Multiple Selected.</string>
    <string name="activity_advanced_search_tv_rewardPoint">MyRewards Points Offered</string>
    <string name="activity_advanced_search_tv_myFavoriteShow">MyFavorites show on top</string>
    <string name="activity_advanced_search_tv_restaurantRating">Restaurant Ratings</string>
    <string name="activity_advanced_search_restaurantStyle">Restaurant Style/Ethnicity</string>
    <string name="activity_advanced_search_tv_serverRating">Server Ratings</string>
    <string name="activity_advanced_search_tv_maxDistance">Max Search Distance</string>
    <string name="activity_advanced_search_bt_saveProfile">Save MySearch Profile</string>
    <string name="dialog_advanced_search_tv_title">Create MySearch Profile</string>
    <string name="dialog_advanced_search_edt_items">Enter Menu Items/Ingredients/Tag Keywords <i>(e.g. Salmon Sushi, No Onion, Vegan, Gluten-Free, Cheeseburger, Apple Martini, etc.)</i></string>
    <string name="dialog_advanced_search_btSavedProfe">MySearch Profile Saved</string>
    <string name="dialog_advanced_search_tv_money">Menu Item Price</string>
    <string name="dialog_advanced_search_tv_menuItemRating">Menu Item Rating</string>
    <string name="dialog_advanced_search_multipleSelected">Published Menu Types</string>
    <string name="dialog_advanced_search_tv_rewardPoint">Points Offered</string>
    <string name="dialog_advanced_search_tv_myFavoriteShow">MyFavorites show on top</string>
    <string name="dialog_advanced_search_tv_restaurantRating">Restaurant Rating</string>
    <string name="dialog_advanced_search_restaurantStyle">Genre(Food Type)</string>
    <string name="dialog_advanced_search_tv_serverRating">Server Rating</string>
    <string name="dialog_advanced_search_tv_maxDistance">Distance from current location</string>
    <string name="dialog_advanced_search_bt_saveProfile">Save MySearch Profile</string>
    <string name="dialog_advanced_search_delete_confirm">Are you sure you want to delete this profile?</string>
    <string name="dialog_advanced_search_delete_default_confirm">Are you sure you want to delete this default profile?</string>
    <string name="activity_mysearch_savedProfile">Saved Profile</string>
    <string name="activity_mysearch_createProfile">Create Profile</string>
    <string name="activity_mypoint_restaurant_title">MyPoints</string>
    <string name="mypoint">MyPoints</string>
    <string name="activity_mypoint_transaction_totalPoint">Total Points:</string>
    <string name="activity_mypoint_share_tv_transferPoint">Transfer Points</string>
    <string name="activity_mypoint_share_btn_sms">SMS</string>
    <string name="activity_mypoint_share_btn_email">EMAIL</string>
    <string name="activity_mypoint_share_hint_point">0</string>
    <string name="activity_mypoint_share_hint_phone">Phone Number*</string>
    <string name="activity_mypoint_share_hint_email">Email Address*</string>
    <string name="activity_mypoint_share_mess_input_phone">Phone number is required.</string>
    <string name="activity_mypoint_share_mess_input_email">Email address is required.</string>
    <string name="activity_mypoint_share_mess_point_over">Shared point must be lower than total point.</string>
    <string name="activity_mypoint_share_mess_input_point">Please input point to share.</string>
    <string name="activity_mypoint_share_mess_sms_success">SMS Sent.</string>
    <string name="activity_mypoint_share_mess_sms_failed">SMS failed, please try again later.</string>
    <string name="activity_mypoint_share_mess_sms_no_sim">No SIM, please insert SIM card.</string>
    <string name="activity_mypoint_share_sharepoint">Shared point successfully.</string>
    <string name="activity_myorder_global_title">MyOrders</string>
    <string name="activity_myorder_details_tv_store">Store #</string>
    <string name="activity_myorder_details_tv_receipt">Receipt #</string>
    <string name="activity_myorder_details_tv_time">Time:</string>
    <string name="activity_myorder_details_tv_date">Date:</string>
    <string name="activity_myorder_details_tv_subtotal">Subtotal</string>
    <string name="activity_myorder_details_tv_tax">Tax</string>
    <string name="activity_myorder_details_tv_tip">Tip</string>
    <string name="activity_myorder_details_tv_total">Total</string>
    <string name="activity_myorder_details_tv_use_points">Use Points</string>
    <string name="activity_myorder_share_email_confirm">Are you sure you want to share this order detail via email?</string>
    <string name="activity_myorder_share_sms_confirm">Are you sure you want to share this order detail via sms?</string>
    <string name="activity_myorder_share_mess_sms_success">This order is shared successfully.</string>
    <string name="activity_myorder_share_mess_sms_failed">SMS failed, please try again later.</string>
    <string name="activity_myorder_share_email_title">Share Order Details Via Email</string>
    <string name="activity_myorder_share_sms_title">Share Order Details Via SMS</string>
    <string name="activity_myorder_share_email_subject">Order Detail Info</string>
    <string name="activity_myorder_share_email_choose">Choose an Email client :</string>
    <string name="activity_myorder_share_server_confirm">There is no server to share.</string>
    <string name="activity_myorder_choose_server_confirm">There is no server to choose.</string>
    <string name="activity_myorder_add_favourite_confirm">There is no server to add favourite.</string>
    <string name="activity_myorder_rate_server_confirm">There is no server to rate.</string>
    <string name="activity_myorder_rate_server_seekbar_title">Server Rating</string>
    <string name="dialog_custom_menu_restaurant_menuitem">Menu Item $</string>
    <string name="dialog_custom_menu_restaurant_menucategories">Menu Categories</string>
    <string name="dialog_save_profile_title">MySearch Profile Name</string>
    <string name="dialog_save_profile_hint">MySearch Name</string>
    <string name="dialog_save_profile_invalidate_distance">Distance must be greater than 0.</string>
    <string name="dialog_save_profile_invalidate_blank_name">Please enter my search name.</string>
    <string name="dialog_save_profile_invalidate_exist_name">MySearch Profile Name is already existing.</string>
    <string name="dialog_profile_add">Add New Profile</string>
    <string name="dialog_profile_title">Saved MySearch</string>
    <string name="dialog_menu_type_title">Menu Type</string>
    <string name="dialog_menu_type_breakfast">Breakfast</string>
    <string name="dialog_menu_type_lunch">Lunch</string>
    <string name="dialog_menu_type_dinner">Dinner</string>
    <string name="dialog_menu_type_happyhour">Happy Hour</string>
    <string name="dialog_menu_type_save_confirm">Are you sure you want to save these options?</string>
    <string name="dialog_restaurant_style_title">Food Type</string>
    <string name="edit_profile_title">Edit Personal Information</string>
    <string name="profile_first_name">First Name*</string>
    <string name="profile_last_name">Last Name*</string>
    <string name="profile_email_adress">Email Address*</string>
    <string name="profile_user_name">Username*</string>
    <string name="profile_zip">Zip Code</string>
    <string name="profile_confirm_password">Confirm Password*</string>
    <string name="profile_new_password">New Password*</string>
    <string name="dialog_photo_title">Upload Profile Photo</string>
    <string name="dialog_photo_take_photo">Take A New Photo</string>
    <string name="dialog_photo_choose_photo">Choose From Library</string>
    <string name="dialog_photo_cancel">CANCEL</string>
    <string name="dialog_change_password_title">Change Password</string>
</resources>