<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/bg"
    android:padding="20dp" >

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/dialog_change_password_title"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@android:color/white" />

    <EditText
        android:id="@+id/dialog_change_password_edt_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_title"
        android:layout_marginTop="20dp"
        android:background="@drawable/edittext_selector"
        android:ellipsize="end"
        android:gravity="center"
        android:hint="@string/profile_new_password"
        android:inputType="textPassword"
        android:padding="5dp"
        android:singleLine="true"
        android:textColor="@android:color/black" />

    <EditText
        android:id="@+id/dialog_change_password_edt_confirm_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/dialog_change_password_edt_password"
        android:layout_marginTop="20dp"
        android:background="@drawable/edittext_selector"
        android:ellipsize="end"
        android:gravity="center"
        android:hint="@string/profile_confirm_password"
        android:inputType="textPassword"
        android:padding="5dp"
        android:singleLine="true"
        android:textColor="@android:color/black" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/dialog_change_password_edt_confirm_password"
        android:layout_marginTop="20dp"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/dialog_change_password_bt_cancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:background="@drawable/button_cancel"
            android:text="@string/cancel"
            android:textColor="@android:color/white" />

        <Button
            android:id="@+id/dialog_change_password_bt_save"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_weight="1"
            android:background="@drawable/button_submit"
            android:text="@string/save"
            android:textColor="@android:color/white" />
    </LinearLayout>

</RelativeLayout>