<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/bg" >

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/edit_profile_title"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/White" />

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_title"
        android:layout_marginTop="20dp"
        android:padding="20dp" >

        <LinearLayout
            android:id="@+id/edit_profile_ll_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="20dp"
            android:orientation="vertical" >

            <EditText
                android:id="@+id/edit_profile_et_first_name"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edittext_selector"
                android:ems="10"
                android:hint="@string/profile_first_name"
                android:inputType="textPersonName"
                android:paddingLeft="20dp"
                android:singleLine="true"
                android:textColor="@color/Black" >

                <requestFocus />
            </EditText>

            <EditText
                android:id="@+id/edit_profile_et_last_name"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@drawable/edittext_selector"
                android:ems="10"
                android:hint="@string/profile_last_name"
                android:inputType="textPersonName"
                android:paddingLeft="20dp"
                android:singleLine="true"
                android:textColor="@color/Black" />
        </LinearLayout>

        <EditText
            android:id="@+id/edit_profile_et_zip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/edit_profile_ll_name"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:background="@drawable/edittext_selector"
            android:ellipsize="end"
            android:ems="6"
            android:gravity="center"
            android:hint="@string/profile_zip"
            android:inputType="number"
            android:maxLength="5"
            android:singleLine="true"
            android:textColor="@color/Black" />

        <EditText
            android:id="@+id/edit_profile_et_email"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/edit_profile_et_zip"
            android:layout_marginTop="20dp"
            android:background="@drawable/edittext_selector"
            android:ems="10"
            android:hint="@string/profile_email_adress"
            android:inputType="textEmailAddress"
            android:paddingLeft="20dp"
            android:singleLine="true"
            android:enabled="false"
            android:editable="false"
            android:focusable="false"
            android:textColor="@color/Black" />

        <EditText
            android:id="@+id/edit_profile_et_user_name"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/edit_profile_et_email"
            android:layout_marginTop="20dp"
            android:background="@drawable/edittext_selector"
            android:ems="10"
            android:hint="@string/profile_user_name"
            android:maxLength="30"
            android:paddingLeft="20dp"
            android:singleLine="true"
            android:textColor="@color/Black" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/edit_profile_et_user_name"
            android:layout_marginTop="20dp"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/edit_profile_bt_cancel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:background="@drawable/button_cancel"
                android:onClick="onClick_Cancel"
                android:text="@string/cancel"
                android:textColor="@android:color/white" />

            <Button
                android:id="@+id/edit_profile_bt_save"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_weight="1"
                android:background="@drawable/button_submit"
                android:onClick="onClick_Save"
                android:text="@string/save"
                android:textColor="@android:color/white" />
        </LinearLayout>
    </RelativeLayout>

</RelativeLayout>