<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Black"
    android:orientation="vertical" >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="#16191A"
                android:gravity="center_vertical"
                android:padding="5dp" >

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="5dp"
                    android:src="@drawable/back_arrow" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="onClick_Back"
                    android:src="@drawable/icon_mm" />

                <TextView
                    android:id="@+id/dialog_advanced_search_header_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:text="@string/activity_advanced_search_tv_title"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@android:color/white" />
            </LinearLayout>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/button_submit"
                android:onClick="onClick_OpenSavedProfile"
                android:padding="5dp"
                android:text="@string/activity_advanced_search_bt_savedProfile"
                android:textColor="@color/White" />

            <EditText
                android:id="@+id/activity_advanced_search_edt_items"
                style="@style/editText_custom"
                android:layout_width="match_parent"
                android:layout_height="110sp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="5dp"
                android:gravity="top|left"
                android:hint="@string/activity_advanced_search_edt_items"
                android:lines="5" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="7dp"
                android:text="@string/activity_advanced_search_tv_money"
                android:textColor="@color/White"
                android:textSize="16sp"
                android:textStyle="bold" />
            <!-- Seekbar to choose money -->

            <LinearLayout
                android:id="@+id/dialog_seekbar_layout_MenuItem"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="7dp"
                android:text="@string/activity_advanced_search_tv_menuType"
                android:textColor="@color/White"
                android:textSize="16sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/activity_advanced_search_bt_multiSelect"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/button_submit"
                android:drawableRight="@drawable/ic_arrow_down"
                android:onClick="onClick_MenuType"
                android:padding="5dp"
                android:text="@string/activity_advanced_search_multipleSelected"
                android:textColor="@color/White" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="7dp"
                android:text="@string/activity_advanced_search_tv_rewardPoint"
                android:textColor="@color/White"
                android:textSize="16sp"
                android:textStyle="bold" />
            <!-- Seekbar to choose myreward points -->

            <LinearLayout
                android:id="@+id/dialog_seekbar_layout_MyRewardPoint"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="7dp"
                    android:text="@string/activity_advanced_search_tv_myFavoriteShow"
                    android:textColor="@color/White"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <ToggleButton
                    android:id="@+id/activity_advanced_search_tbt_showOnTop"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="7dp"
                android:text="@string/activity_advanced_search_tv_restaurantRating"
                android:textColor="@color/White"
                android:textSize="16sp"
                android:textStyle="bold" />
            <!-- Seekbar to choose Restaurant Ratings points -->

            <LinearLayout
                android:id="@+id/dialog_seekbar_layout_restaurantRating"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" />

            <Button
                android:id="@+id/activity_advanced_search_bt_resStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/button_submit"
                android:drawableRight="@drawable/ic_arrow_down"
                android:onClick="onClick_RestaurantStyle"
                android:padding="5dp"
                android:text="@string/activity_advanced_search_restaurantStyle"
                android:textColor="@color/White" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="7dp"
                android:text="@string/activity_advanced_search_tv_serverRating"
                android:textColor="@color/White"
                android:textSize="16sp"
                android:textStyle="bold" />
            <!-- Seekbar to choose Server Ratings points -->

            <LinearLayout
                android:id="@+id/dialog_seekbar_layout_serverRating"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="7dp"
                android:text="@string/activity_advanced_search_tv_maxDistance"
                android:textColor="@color/White"
                android:textSize="16sp"
                android:textStyle="bold" />
            <!-- Seekbar to choose Search Distance points -->

            <LinearLayout
                android:id="@+id/dialog_seekbar_layout_searchDistance"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" />

            <Button
                android:id="@+id/activity_advanced_search_bt_saveProfile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/button_submit"
                android:onClick="onClick_SaveProfile"
                android:padding="5dp"
                android:text="@string/activity_advanced_search_bt_saveProfile"
                android:textColor="@color/White" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:orientation="horizontal" >

                <Button
                    android:id="@+id/activity_advanced_search_btn_SavedProfile"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/button_submit"
                    android:onClick="onClick_Search"
                    android:padding="5dp"
                    android:text="@string/search"
                    android:textColor="@color/White" />

                <Button
                    android:id="@+id/activity_advanced_search_btn_createNewProfile"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/button_cancel"
                    android:onClick="onClick_Cancel"
                    android:padding="5dp"
                    android:text="@string/cancel"
                    android:textColor="@color/White" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true" >

        <LinearLayout
            android:id="@+id/optionmenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone" >

            <com.magrabbit.intelligentmenu.customview.OptionMenu
                android:id="@+id/optionMenu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>