<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/bg"
    android:orientation="vertical"
    android:padding="20dp" >

    <TextView
        android:id="@+id/custom_photo_title"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/dialog_photo_title"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/White" />

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/custom_photo_title"
        android:layout_marginTop="20dp"
        android:background="@drawable/border_dialog_photo"
        android:orientation="vertical"
        android:padding="20dp" >

        <Button
            android:id="@+id/custom_photo_bt_take_photo"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/button_submit"
            android:gravity="center"
            android:text="@string/dialog_photo_take_photo"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/White" />

        <Button
            android:id="@+id/custom_photo_bt_choose"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/button_submit"
            android:gravity="center"
            android:text="@string/dialog_photo_choose_photo"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/White" />
    </LinearLayout>

    <Button
        android:id="@+id/custom_photo_bt_cancel"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearLayout1"
        android:layout_marginTop="30dp"
        android:background="@drawable/button_cancel"
        android:text="@string/dialog_photo_cancel"
        android:textColor="@color/White" />

</RelativeLayout>